<?xml version="1.0"?>
<package format="2">
  <name>trajectory_data</name>
  <version>0.0.0</version>
  <description>The repository with the saved data</description>
  <maintainer email="g.franzese@tudelft.nl">franzesegiovanni</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>pynput</depend>

</package>
